--- a/index_5.html
+++ b/index_5.html
@@ -23,7 +23,7 @@
                         sum += f;
                         n++;
                         f_2 = 2 * sum;
-                    } while (f_2 < (f_1 - 0.0000001));
+                    } while (f_2 != f_1);
                     document.write('<p>С помощью разложения функции в ряд Тейлора: ' + f_2 + '</p>');
                 } else {
                     alert('Неправильно введен x');
